adicionando os testes JMH a versão com synchronized